Refactoring of Base/java-askap and CP/manager code
* Changed ParameterSet to no longer subclass java.util.Properties
* Use more modern language and API features


git-svn-id: https://svn.atnf.csiro.au/askapsdp/trunk@6395 1db04d4c-0ff0-4329-ae0b-98c546476c6a